--- a/lib/l10n/app_fr.arb
+++ b/lib/l10n/app_fr.arb
@@ -1,3 +1,9 @@
 ﻿{
-  "@@locale": "fr"
+  "@@locale": "fr",
+
+  "smartRefresherDataRefreshed": "Données récupérées!",
+  "smartRefresherFailed": "Erreur, tirez pour réessayer!",
+  "smartRefresherNoData": "Pas de données",
+  "smartRefresherPullToLoad": "Tirer pour charger",
+  "smartRefresherRelease": "Lâcher pour charger"
 }
